permissions for twig and php, session user
- create permission function for php use and macros for twig uses
- in posts controller add default null value to parameters -> it allows for reddirection when parameter/s not given without error message
 - for session instead of several user parameters I give directly the user
- in users create several methods for changing user values - not finished yet
 - in review change column review on review_id - to get user who write review

--- a/app/views/includes/navigation.inc.twig
+++ b/app/views/includes/navigation.inc.twig
@@ -14,7 +14,7 @@
             </ul>
 
             <ul class="navbar-nav nav-pills ms-auto">
-                {% if session.user_id is not empty %}
+                {% if session.user is not empty %}
                 <li class="nav-item">
                     <span class="input-group">
                         <a class="nav-link" href="{{ constant('URLROOT')}}/users/profil">
@@ -24,7 +24,7 @@
                 </li>
                 <li class="nav-item">
                     <span class="input-group nav-link">
-                            <i class="fas fa-user" rel="uživatel" title="uživatel"></i> {{ session.username }}({{ session.role }})
+                            <i class="fas fa-user" rel="uživatel" title="uživatel"></i> {{ session.user.username }}({{ session.user.role }})
                     </span>
                 </li>
                 <li class="nav-item btn-login">
