--- a/app/views/users/index.html.twig
+++ b/app/views/users/index.html.twig
@@ -1,28 +1,68 @@
 {% extends('default.html.twig') %}
 
 {% block content %}
+    <div class="container">
+        <h1>Profil uživatele</h1>
 
-    <h1>Uživatelé přehled</h1>
+        <form>
+            <table class="table table-striped">
+                <tr>
+                    <th>Typ informace</th>
+                    <th>Hodnota</th>
+                </tr>
+                <tr>
+                   <td>Jméno:</td>
+                    <td><input class="form-control" type="text" id="username" placeholder="Uživatelské jméno *" name="username" value="{{ session.user.username }}"> </td>
+                </tr>
+                <tr>
+                    <td>Email:</td>
+                    <td><input class="form-control" id="email" type="email" placeholder="Email *" name="email" value="{{ session.user.email }}"></td>
+                </tr>
 
-    {% for post in posts %}
-        <div class="container-item">
-        {% if session.user_id is not empty and session.user_id == post.user_id %}
-            <a class="myBtn btn orange ms-3 float-end"
-               href="{{ constant('URLROOT')}}/posts/update/{{ post.id}}">
-                Upravit
-            </a>
+                <tr>
+                    <td>Heslo:</td>
+                    <td><input class="form-control" type="password" id="username" placeholder="Heslo *" name="password" value=""> </td>
+                </tr>
+                <tr>
+                    <td>role: </td>
+                    <td>{{ session.user.role }}</td>
+                </tr>
+            </table>
+            <button class="myBtn btn btn-primary float-end" id="registerButton" disabled="disabled" type="submit" value="submit">Odeslat</button>
+        </form>
 
-            <form action="{{ constant('URLROOT')}}/posts/delete/{{ post.id}}" method="POST" class="delete-form">
-                <button class="myBtn btn btn-danger float-end ms-2" name="submit" type="submit">Smazat</button>
-            </form>
 
-        {% endif %}
 
-        <h2><a href="{{ constant('URLROOT') }}/posts/show/{{ post.id }}">{{ post.title }}</a></h2>
-        <p>
-            {{ post.content | raw  }}
-        </p>
-        </div>
-    {% endfor %}
 
+
+
+
+        <table class="table table-striped">
+        <thead>
+        <tr>
+            <th scope="col">Titulek</th>
+            <th scope="col">Popis</th>
+        </tr>
+        </thead>
+        {% for post in userPosts %}
+            <tbody>
+            <td><a href="{{ constant('URLROOT') }}/posts/show/{{ post.id }}">{{ post.title }}</a></td>
+            <td>{{ post.description }}</td>
+            {% if session.user is not empty and session.user.id == post.user_id %}
+                <td>
+                    <a class="myBtn btn orange ms-3 float-end"
+                       href="{{ constant('URLROOT')}}/posts/update/{{ post.id}}">
+                        Upravit
+                    </a>
+                </td>
+                <td>
+                    <form action="{{ constant('URLROOT')}}/posts/delete/{{ post.id}}" method="POST" class="delete-form">
+                        <button class="myBtn btn btn-danger float-end ms-2" name="submit" type="submit">Smazat</button>
+                    </form>
+                </td>
+            {% endif %}
+        {% endfor %}
+            </tbody>
+        </table>
+    </div>
 {% endblock %}
