change user data
 - add default null values to reviews controller functions
- rename method findUseByEmail on userEmailAlreadyRegistered
- add function to find user by his id, user can now change password, username and email
             - for changing password form in his own view
- in navigation - change link to user profile

--- a/app/views/includes/navigation.inc.twig
+++ b/app/views/includes/navigation.inc.twig
@@ -23,8 +23,10 @@
                     </span>
                 </li>
                 <li class="nav-item">
-                    <span class="input-group nav-link">
-                            <i class="fas fa-user" rel="uživatel" title="uživatel"></i> {{ session.user.username }}({{ session.user.role }})
+                    <span class="input-group">
+                        <a class="nav-link" href="{{ constant('URLROOT')}}/users/profil">
+                            <i class="fas fa-user" rel="uživatel" alt="user profile:"></i> {{ session.user.username }}({{ session.user.role }})
+                        </a>
                     </span>
                 </li>
                 <li class="nav-item btn-login">
