--- a/app/views/includes/navigation.inc.twig
+++ b/app/views/includes/navigation.inc.twig
@@ -15,13 +15,15 @@
 
             <ul class="navbar-nav nav-pills ms-auto">
                 {% if session.user is not empty %}
-                <li class="nav-item">
-                    <span class="input-group">
-                        <a class="nav-link" href="{{ constant('URLROOT')}}/users/profil">
-                                    <i class="fas fa-users-cog"></i> Profil
-                            </a>
-                    </span>
-                </li>
+                    {% if session.user.role == 'superadmin' or session.user.role == 'admin' %}
+                    <li class="nav-item">
+                        <span class="input-group">
+                            <a class="nav-link" href="{{ constant('URLROOT')}}/users/manageUsers">
+                                        <i class="fas fa-users-cog"></i> Správa uživatelů
+                                </a>
+                        </span>
+                    </li>
+                    {% endif %}
                 <li class="nav-item">
                     <span class="input-group">
                         <a class="nav-link" href="{{ constant('URLROOT')}}/users/profil">
