--- a/app/views/posts/update.html.twig
+++ b/app/views/posts/update.html.twig
@@ -17,7 +17,6 @@
         </div>
 
         <div class="form-group mb-4 form-item">
-
             <label>Popis článku</label>
             <textarea class="form-control" type="text" name="description" placeholder="Zadejte popisek">
                 {{ post.description }}
@@ -25,7 +24,7 @@
         </div>
 
         <div class="form-group mb-4 form-item">
-            <label>Nadpis</label>
+            <label>Čláenk</label>
             <textarea class="form-control" type="text" id="wysiwygTextArea" name="content" placeholder="Zadejte svůj příspěvek *">
                 {{ post.content }}
             </textarea>
