--- a/app/views/posts/show.html.twig
+++ b/app/views/posts/show.html.twig
@@ -9,10 +9,12 @@
         {{ macros.canUpdateDeletePost(post)}}
 
         <h2>{{ post.title }}</h2>
-        <p>{{ post.content | raw }}</p>
-        <a target="_blank" href="{{ constant('URLROOT') }}/public/uploads/{{ post.file }}" title="">Otevřít v jiném okně</a>
-        <embed src="{{ constant('URLROOT') }}/public/uploads/{{ post.file }}" type="application/pdf" width="100%" height="600px">
         <p>{{ post.description | raw }}</p>
+        <p>{{ post.content | raw }}</p>
+        {% if post.file != '' %}
+            <a target="_blank" href="{{ constant('URLROOT') }}/public/uploads/{{ post.file }}" title="">Otevřít v jiném okně</a>
+            <embed src="{{ constant('URLROOT') }}/public/uploads/{{ post.file }}" type="application/pdf" width="100%" height="600px">
+        {% endif %}
         <br>
         
         <h2>Recenze</h2>
