--- a/app/views/users/login.html.twig
+++ b/app/views/users/login.html.twig
@@ -11,10 +11,12 @@
                         <div class="form-outline mb-4">
                             <div class="form-group">
                                 <div class="input-group">
+
                                     <div class="input-group-addon iconInput iconInputLeft pt-2" >
                                             <i class="fas fa-user" ></i>
                                     </div>
-                                    <input class="form-control" id="usernameOrEmail" type="text" placeholder="Uživatelské jméno *" name="usernameOrEmail" value="{{ usernameOrEmail }}">
+
+                                    <input autofocus class="form-control" id="usernameOrEmail" type="text" placeholder="Uživatelské jméno *" name="usernameOrEmail" value="{{ usernameOrEmail }}">
 
                                 </div>
                             </div>
@@ -28,8 +30,10 @@
                                         <div class="input-group-addon iconInput iconInputLeft pt-2" >
                                             <i class="fas fa-lock formIcon"></i>
                                         </div>
+                                        <label>
                                         <input class="form-control" id="password" type="password" placeholder="Heslo *" name="password" />
-                                        <div class="input-group-addon iconInput iconInputRight pt-2"
+                                        </label>
+                                            <div class="input-group-addon iconInput iconInputRight pt-2"
                                              onclick="openCloseEye('password', 'openEye', 'closeEye')">
                                                 <i id="closeEye" class="fas fa-eye-slash"></i>
                                                 <i id="openEye" class="fas fa-eye" style="display:none;"></i>
